--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "gatsby": "^2.25.3",
+    "gatsby-plugin-manifest": "^2.9.1",
+    "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.4.2",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "save-dev": "0.0.1-security"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.0",
     "prettier": "2.1.2"
   },
   "repository": {
