--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.0",
+    "gh-pages": "^3.1.0",
     "prettier": "2.1.2"
   },
   "repository": {
