--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "gatsby": "^2.25.3",
+    "gatsby": "^2.31.1",
     "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.4.2",
+    "gatsby-plugin-transition-link": "^1.20.5",
+    "gsap": "^3.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
